# fastapi-fullstack

./: .gitignore  docker-compose.deploy.yml  docker-compose.dev.yml  docker-run.sh  fastapi.deploy.conf  fastapi.dev.conf
src/api/: Dockerfile  env.example  main.py  pyproject.toml  settings.py
src/api/endpoints/: endpoints.py
src/front/: Dockerfile  package.json
src/front/public/: index.html  manifest.json
src/front/src/: App.js
src/front/src/pages/: authorized.jsx
